--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!--Inicio header-->
   <!--Inicio primera columna del header-->
-  <header class="row">
+  <header class="row" id="arriba">
     <div class="col col__navbar">
       <nav class="navbar navbar-expand-lg color">
         <div class="container-fluid">
